--- a/css/register.css
+++ b/css/register.css
@@ -8,3 +8,19 @@
     justify-content:space-between;
     width: 135px;
 }
+#button-id{
+    text-align: center;
+}
+.register-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h2{
+    font-size:50px;
+    color:blue;
+}
+.registerForm{
+    padding:15px;
+    border: 2px solid;
+}
